--- a/index.html
+++ b/index.html
@@ -74,15 +74,13 @@
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^18.3.1",
-    "react/": "https://esm.sh/react@^18.3.1/",
-    "firebase/": "https://esm.sh/firebase@^10.13.0/",
-    "@google/genai": "https://esm.sh/@google/genai@^0.1.1",
-    "lucide-react": "https://esm.sh/lucide-react@^0.439.0",
-    "react-dom/": "https://esm.sh/react-dom@^18.3.1/",
-    "recharts": "https://esm.sh/recharts@2.12.7",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "react": "https://esm.sh/react@^19.2.3",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "firebase/": "https://esm.sh/firebase@^12.7.0/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "recharts": "https://esm.sh/recharts@2.15.0"
   }
 }
 </script>
