--- a/index.html
+++ b/index.html
@@ -1,91 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="ABFIT Elite - Sistema de Alta Performance" />
+    <title>ABFIT Elite</title>
     
-    <!-- iOS PWA capability -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="ABFIT Elite" />
-    
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" type="image/png" href="https://img.icons8.com/color/96/dumbbell.png" />
-    <link rel="apple-touch-icon" href="https://img.icons8.com/color/180/dumbbell.png" />
 
-    <title>ABFIT Elite</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-      // Polyfill process.env for the GenAI SDK
-      window.process = {
-        env: {
-          API_KEY: "AIzaSyCJ9K6sovkNzeO_fuQbSPD9LnIUG0p8Da4"
-        }
-      };
+        // Configuração Global (Padrão que o Vercel lê corretamente)
+        window.process = { env: { API_KEY: "AIzaSyCJ9K6sovkNzeO_fuQbSPD9LnIUG0p8Da4" } };
+        window.__firebase_config = {
+            apiKey: "AIzaSyD_C_yn_RyBSopY7Tb9aqLW8akkXJR94Vg",
+            authDomain: "chaveunica-225e0.firebaseapp.com",
+            projectId: "chaveunica-225e0",
+            storageBucket: "chaveunica-225e0.firebasestorage.app",
+            messagingSenderId: "324211037832",
+            appId: "1:324211037832:web:362a46e6446ea37b85b13d"
+        };
+        window.__app_id = "abfit-elite-production";
 
-      // REAL FIREBASE CONFIGURATION
-      window.__firebase_config = {
-        apiKey: "AIzaSyD_C_yn_RyBSopY7Tb9aqLW8akkXJR94Vg",
-        authDomain: "chaveunica-225e0.firebaseapp.com",
-        projectId: "chaveunica-225e0",
-        storageBucket: "chaveunica-225e0.firebasestorage.app",
-        messagingSenderId: "324211037832",
-        appId: "1:324211037832:web:362a46e6446ea37b85b13d",
-        measurementId: "G-MRBDJC3QXZ"
-      };
-      window.__app_id = "abfit-elite-production";
-
-      // Service Worker Registration
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js')
-            .then(registration => {
-              console.log('SW registered: ', registration);
-            })
-            .catch(registrationError => {
-              console.log('SW registration failed: ', registrationError);
+        // Service Worker Registration
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/sw.js');
             });
-        });
-      }
+        }
     </script>
     <style>
-      /* Custom scrollbar for a premium feel */
-      .custom-scrollbar::-webkit-scrollbar {
-        width: 6px;
-      }
-      .custom-scrollbar::-webkit-scrollbar-track {
-        background: #18181b; 
-      }
-      .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: #dc2626; 
-        border-radius: 10px;
-      }
-      .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-        background: #b91c1c; 
-      }
-      body {
-        background-color: #000;
-        color: #fff;
-        overscroll-behavior-y: none; /* Prevents pull-to-refresh on mobile */
-      }
+      .custom-scrollbar::-webkit-scrollbar { width: 6px; }
+      .custom-scrollbar::-webkit-scrollbar-track { background: #18181b; }
+      .custom-scrollbar::-webkit-scrollbar-thumb { background: #dc2626; border-radius: 10px; }
+      body { background-color: #000; color: #fff; overscroll-behavior-y: none; }
     </style>
-  <script type="importmap">
+
+    <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "firebase/": "https://esm.sh/firebase@^12.7.0/",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.474.0",
+    "firebase/app": "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js",
+    "firebase/auth": "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js",
+    "firebase/firestore": "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "recharts": "https://esm.sh/recharts@2.15.0",
+    "firebase/": "https://esm.sh/firebase@^12.7.0/",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "recharts": "https://esm.sh/recharts@2.15.0"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
-  <body>
+<body class="bg-black text-white antialiased">
     <div id="root"></div>
-  </body>
+    <script type="module" src="./index.tsx"></script> 
+</body>
 </html>
