--- a/index.html
+++ b/index.html
@@ -1,58 +1,41 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-PT">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#000000" />
     <title>ABFIT Elite</title>
     
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="icon" type="image/png" href="https://img.icons8.com/color/96/dumbbell.png" />
+    <script>
+        window.process = { env: { API_KEY: "AIzaSyCJ9K6sovkNzeO_fuQbSPD9LnIUG0p8Da4" } };
+    </script>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        // Configuração Global (Padrão que o Vercel lê corretamente)
-        window.process = { env: { API_KEY: "AIzaSyCJ9K6sovkNzeO_fuQbSPD9LnIUG0p8Da4" } };
-        window.__firebase_config = {
-            apiKey: "AIzaSyD_C_yn_RyBSopY7Tb9aqLW8akkXJR94Vg",
-            authDomain: "chaveunica-225e0.firebaseapp.com",
-            projectId: "chaveunica-225e0",
-            storageBucket: "chaveunica-225e0.firebasestorage.app",
-            messagingSenderId: "324211037832",
-            appId: "1:324211037832:web:362a46e6446ea37b85b13d"
-        };
-        window.__app_id = "abfit-elite-production";
+        tailwind.config = { theme: { extend: { colors: { eliteRed: '#dc2626' } } } }
     </script>
-    <style>
-      .custom-scrollbar::-webkit-scrollbar { width: 6px; }
-      .custom-scrollbar::-webkit-scrollbar-track { background: #18181b; }
-      .custom-scrollbar::-webkit-scrollbar-thumb { background: #dc2626; border-radius: 10px; }
-      body { background-color: #000; color: #fff; overscroll-behavior-y: none; }
-    </style>
 
-    <script type="importmap">
+    <style>
+        body { background-color: #000; color: #fff; font-family: 'Inter', sans-serif; margin: 0; overflow-x: hidden; }
+        .custom-scrollbar::-webkit-scrollbar { width: 4px; }
+        .custom-scrollbar::-webkit-scrollbar-track { background: #000; }
+        .custom-scrollbar::-webkit-scrollbar-thumb { background: #dc2626; border-radius: 4px; }
+    </style>
+<script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "lucide-react": "https://esm.sh/lucide-react@0.474.0",
-    "firebase/app": "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js",
-    "firebase/auth": "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js",
-    "firebase/firestore": "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "recharts": "https://esm.sh/recharts@2.15.0",
-    "firebase/": "https://esm.sh/firebase@^12.7.0/",
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "firebase/": "https://esm.sh/firebase@^12.7.0/",
+    "recharts": "https://esm.sh/recharts@^3.6.0",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
   }
 }
 </script>
 </head>
-<body class="bg-black text-white antialiased">
+<body>
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script> 
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
