--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        // Configuração Global (Padrão que o Vercel lê corretamente)
+        // Configuração Global e Mock de process.env para compatibilidade cliente
         window.process = { env: { API_KEY: "AIzaSyCJ9K6sovkNzeO_fuQbSPD9LnIUG0p8Da4" } };
         window.__firebase_config = {
             apiKey: "AIzaSyD_C_yn_RyBSopY7Tb9aqLW8akkXJR94Vg",
@@ -29,7 +29,14 @@
       .custom-scrollbar::-webkit-scrollbar { width: 6px; }
       .custom-scrollbar::-webkit-scrollbar-track { background: #18181b; }
       .custom-scrollbar::-webkit-scrollbar-thumb { background: #dc2626; border-radius: 10px; }
-      body { background-color: #000; color: #fff; overscroll-behavior-y: none; }
+      body { 
+        background-color: #000; 
+        color: #fff; 
+        overscroll-behavior-y: none;
+        -webkit-tap-highlight-color: transparent;
+      }
+      .animate-fadeIn { animation: fadeIn 0.5s ease-out forwards; }
+      @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
     </style>
 
     <script type="importmap">
@@ -42,11 +49,11 @@
     "firebase/app": "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js",
     "firebase/auth": "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js",
     "firebase/firestore": "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "@google/genai": "https://esm.sh/@google/genai@1.34.0",
     "recharts": "https://esm.sh/recharts@2.13.0",
-    "firebase/": "https://esm.sh/firebase@10.7.1/",
-    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
-    "react/": "https://esm.sh/react@18.3.1/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "firebase/": "https://esm.sh/firebase@^12.7.0/"
   }
 }
 </script>
