--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        // Configuração Global (Padrão que o Vercel lê corretamente)
-        window.process = { env: { API_KEY: "AIzaSyCJ9K6sovkNzeO_fuQbSPD9LnIUG0p8Da4" } };
+        // Configuração Global e Mock de process para o browser
+        window.process = { 
+          env: { 
+            API_KEY: "AIzaSyCJ9K6sovkNzeO_fuQbSPD9LnIUG0p8Da4" 
+          } 
+        };
         window.__firebase_config = {
             apiKey: "AIzaSyD_C_yn_RyBSopY7Tb9aqLW8akkXJR94Vg",
             authDomain: "chaveunica-225e0.firebaseapp.com",
@@ -26,32 +30,40 @@
         window.__app_id = "abfit-elite-production";
     </script>
     <style>
-      .custom-scrollbar::-webkit-scrollbar { width: 6px; }
-      .custom-scrollbar::-webkit-scrollbar-track { background: #18181b; }
+      .custom-scrollbar::-webkit-scrollbar { width: 4px; }
+      .custom-scrollbar::-webkit-scrollbar-track { background: #000; }
       .custom-scrollbar::-webkit-scrollbar-thumb { background: #dc2626; border-radius: 10px; }
-      body { background-color: #000; color: #fff; overscroll-behavior-y: none; }
+      body { 
+        background-color: #000; 
+        color: #fff; 
+        overscroll-behavior-y: none; 
+        font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+        -webkit-tap-highlight-color: transparent;
+      }
+      .animate-fadeIn { animation: fadeIn 0.4s ease-out forwards; }
+      @keyframes fadeIn { from { opacity: 0; transform: translateY(5px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 
     <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "lucide-react": "https://esm.sh/lucide-react@0.474.0",
+    "react": "https://esm.sh/react@18.3.1",
+    "react-dom": "https://esm.sh/react-dom@18.3.1",
+    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.450.0",
     "firebase/app": "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js",
     "firebase/auth": "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js",
     "firebase/firestore": "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "recharts": "https://esm.sh/recharts@2.15.0",
-    "firebase/": "https://esm.sh/firebase@^12.7.0/",
+    "@google/genai": "https://esm.sh/@google/genai@1.34.0",
+    "recharts": "https://esm.sh/recharts@2.13.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "firebase/": "https://esm.sh/firebase@^12.7.0/",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
-<body class="bg-black text-white antialiased">
+<body class="bg-black text-white antialiased overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script> 
 </body>
