feat: Improve API key handling and dependency updates
Refactors API key retrieval for Firebase and Gemini to prioritize Vite environment variables, with fallbacks to legacy methods. Updates dependencies for React, React DOM, and Lucide React to their latest versions.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         // Configuração Global e Polyfill de Process para o Browser
+        // Fallback para desenvolvimento local sem .env
         window.process = { 
           env: { 
             API_KEY: "AIzaSyCJ9K6sovkNzeO_fuQbSPD9LnIUG0p8Da4" 
