--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
     "firebase/firestore": "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js",
     "@google/genai": "https://esm.sh/@google/genai@1.34.0",
     "recharts": "https://esm.sh/recharts@2.13.0",
+    "firebase/": "https://esm.sh/firebase@^12.7.0/",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "firebase/": "https://esm.sh/firebase@^12.7.0/",
-    "express": "https://esm.sh/express@^5.2.1",
     "path": "https://esm.sh/path@^0.12.7",
-    "url": "https://esm.sh/url@^0.11.4"
+    "url": "https://esm.sh/url@^0.11.4",
+    "express": "https://esm.sh/express@^5.2.1"
   }
 }
 </script>
