--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     "firebase/": "https://esm.sh/firebase@^12.7.0/",
     "express": "https://esm.sh/express@^5.2.1",
     "path": "https://esm.sh/path@^0.12.7",
-    "url": "https://esm.sh/url@^0.11.4"
+    "url": "https://esm.sh/url@^0.11.4",
+    "fs": "https://esm.sh/fs@^0.0.1-security"
   }
 }
 </script>
