feat(form): Add advanced metrics toggle and state update
Introduces a toggle for advanced metrics within the workout form. Refactors state management from `formData` to `treino` for improved clarity. Updates Firebase configuration with new API key.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             API_KEY: "AIzaSyCJ9K6sovkNzeO_fuQbSPD9LnIUG0p8Da4" 
           } 
         };
+        // Updated Firebase Config
         window.__firebase_config = {
             apiKey: "AIzaSyD_C_yn_RyBSopY7Tb9aqLW8akkXJR94Vg",
             authDomain: "chaveunica-225e0.firebaseapp.com",
