--- a/index.html
+++ b/index.html
@@ -13,21 +13,9 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        // Configuração Global e Polyfill de Process para o Browser
-        window.process = { 
-          env: { 
-            API_KEY: "AIzaSyCJ9K6sovkNzeO_fuQbSPD9LnIUG0p8Da4" 
-          } 
-        };
-        // Updated Firebase Config
-        window.__firebase_config = {
-            apiKey: "AIzaSyD_C_yn_RyBSopY7Tb9aqLW8akkXJR94Vg",
-            authDomain: "chaveunica-225e0.firebaseapp.com",
-            projectId: "chaveunica-225e0",
-            storageBucket: "chaveunica-225e0.firebasestorage.app",
-            messagingSenderId: "324211037832",
-            appId: "1:324211037832:web:362a46e6446ea37b85b13d"
-        };
+        // Configuração Global (Padrão que o Vercel lê corretamente)
+        window.process = { env: { API_KEY: "AIzaSyCJ9K6sovkNzeO_fuQbSPD9LnIUG0p8Da4" } };
+        // Firebase Config removed to force offline/demo mode and prevent connection errors
         window.__app_id = "abfit-elite-production";
     </script>
     <style>
@@ -40,26 +28,18 @@
     <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@18.3.1",
-    "react-dom": "https://esm.sh/react-dom@18.3.1",
-    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
-    "lucide-react": "https://esm.sh/lucide-react@0.450.0",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.474.0",
     "firebase/app": "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js",
     "firebase/auth": "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js",
     "firebase/firestore": "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js",
-    "@google/genai": "https://esm.sh/@google/genai@1.34.0",
-    "recharts": "https://esm.sh/recharts@2.13.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "recharts": "https://esm.sh/recharts@2.15.0",
     "firebase/": "https://esm.sh/firebase@^12.7.0/",
-    "express": "https://esm.sh/express@^5.2.1",
-    "path": "https://esm.sh/path@^0.12.7",
-    "url": "https://esm.sh/url@^0.11.4",
-    "fs": "https://esm.sh/fs@^0.0.1-security",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "zustand/": "https://esm.sh/zustand@^5.0.9/",
-    "zustand": "https://esm.sh/zustand@^5.0.9"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
